--- a/Data/App.config
+++ b/Data/App.config
@@ -16,13 +16,17 @@
       </provider></providers>
   </entityFramework>
   <connectionStrings>
-    <add name="cDbContext" connectionString="server=localhost; port=3306; database=catalog; user=root; password=12357895" providerName="MySql.Data.MySqlClient" />
+    <add name="cDbContext" connectionString="SERVER=localhost; DATABASE=catalog; UID=root; PASSWORD=12357895" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-8.0.15.0" newVersion="8.0.15.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Protobuf" publicKeyToken="a7d26565bac4d604" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.7.0.0" newVersion="3.7.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
