--- a/WindowsFormsApp/WindowsFormsApp.csproj
+++ b/WindowsFormsApp/WindowsFormsApp.csproj
@@ -77,6 +77,12 @@
     <Compile Include="Controls\ListItems.Designer.cs">
       <DependentUpon>ListItems.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Pages\SearchItem.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Pages\SearchItem.Designer.cs">
+      <DependentUpon>SearchItem.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,6 +96,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\DisplayItemMovie.resx">
       <DependentUpon>DisplayItemMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\ListItems.resx">
+      <DependentUpon>ListItems.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Pages\SearchItem.resx">
+      <DependentUpon>SearchItem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
