--- a/Business/App.config
+++ b/Business/App.config
@@ -16,18 +16,7 @@
       </provider></providers>
   </entityFramework>
   <connectionStrings>
-    <add name="CatalogDbContext" connectionString="SERVER=localhost; DATABASE=catalog; UID=root; PASSWORD=12357895" providerName="MySql.Data.MySqlClient" />
+    <add name="CatalogDbContext" connectionString="SERVER=localhost; DATABASE=catalog; UID=root; PASSWORD=root123" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.10.8.0" newVersion="6.10.8.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Google.Protobuf" publicKeyToken="a7d26565bac4d604" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.7.0.0" newVersion="3.7.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+  
 </configuration>
