--- a/ConsoleUIApp/App.config
+++ b/ConsoleUIApp/App.config
@@ -7,9 +7,6 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
-  <connectionStrings>
-    <add name="CatalogDbContext" connectionString="SERVER=localhost; DATABASE=catalog; UID=root; PASSWORD=12357895" providerName="MySql.Data.MySqlClient" />
-  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -17,7 +14,11 @@
       </parameters>
     </defaultConnectionFactory>
     <providers>
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.10.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="CatalogDbContext" connectionString="SERVER=localhost; DATABASE=catalog; UID=root; PASSWORD=root123" providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
 </configuration>
