Updated WindowsFormApp and added NUnitTest
Co-Authored-By: Ivan Dosev <yeetlord420@users.noreply.github.com>

--- a/ConsoleUIApp/App.config
+++ b/ConsoleUIApp/App.config
@@ -19,6 +19,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="CatalogDbContext" connectionString="SERVER=localhost; DATABASE=catalog; UID=root; PASSWORD=root123" providerName="MySql.Data.MySqlClient" />
+    <add name="CatalogDbContext" connectionString="SERVER=localhost; DATABASE=catalog; UID=root; PASSWORD=12357895" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 </configuration>
