Some changes and added image support

--- a/Data/App.config
+++ b/Data/App.config
@@ -16,7 +16,7 @@
       </provider></providers>
   </entityFramework>
   <connectionStrings>
-    <add name="CatalogDbContext" connectionString="SERVER=localhost; DATABASE=catalog; UID=root; PASSWORD=root123" providerName="MySql.Data.MySqlClient" />
+    <add name="CatalogDbContext" connectionString="SERVER=localhost; DATABASE=catalog; UID=root; PASSWORD=12357895" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
