--- a/Business/packages.config
+++ b/Business/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Google.Protobuf" version="3.7.0" targetFramework="net461" />
+  <package id="Microsoft.CodeCoverage" version="15.8.0" targetFramework="net461" />
+  <package id="Microsoft.NET.Test.Sdk" version="15.8.0" targetFramework="net461" />
   <package id="MySql.Data" version="6.10.7" targetFramework="net461" />
   <package id="MySql.Data.Entity" version="6.10.7" targetFramework="net461" />
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
