--- a/WindowsFormsApp/WindowsFormsApp.csproj
+++ b/WindowsFormsApp/WindowsFormsApp.csproj
@@ -39,6 +39,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Accessibility" />
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -78,11 +79,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controls\Display\DisplayItem.cs">
+    <Compile Include="Controls\Display\DisplayItemBase.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Controls\Display\DisplayItem.Designer.cs">
-      <DependentUpon>DisplayItem.cs</DependentUpon>
+    <Compile Include="Controls\Display\DisplayItemBase.Designer.cs">
+      <DependentUpon>DisplayItemBase.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\Display\DisplayItemBook.cs">
       <SubType>UserControl</SubType>
@@ -114,6 +115,24 @@
     <Compile Include="Controls\Pages\ReviewItem.Designer.cs">
       <DependentUpon>ReviewItem.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Review\ReviewItemBase.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Review\ReviewItemBase.Designer.cs">
+      <DependentUpon>ReviewItemBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Review\ReviewItemBook.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Review\ReviewItemBook.Designer.cs">
+      <DependentUpon>ReviewItemBook.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\Review\ReviewItemMovie.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\Review\ReviewItemMovie.Designer.cs">
+      <DependentUpon>ReviewItemMovie.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,8 +142,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resouces\ImageLoader.cs" />
-    <EmbeddedResource Include="Controls\Display\DisplayItem.resx">
-      <DependentUpon>DisplayItem.cs</DependentUpon>
+    <EmbeddedResource Include="Controls\Display\DisplayItemBase.resx">
+      <DependentUpon>DisplayItemBase.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\Display\DisplayItemBook.resx">
       <DependentUpon>DisplayItemBook.cs</DependentUpon>
@@ -140,6 +159,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\Pages\ReviewItem.resx">
       <DependentUpon>ReviewItem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Review\ReviewItemBase.resx">
+      <DependentUpon>ReviewItemBase.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Review\ReviewItemBook.resx">
+      <DependentUpon>ReviewItemBook.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\Review\ReviewItemMovie.resx">
+      <DependentUpon>ReviewItemMovie.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
